Made changes to the buffer manager to handle both index files and regular table files